[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsgis-toolbox"
version = "0.0.2"
authors = [
  { name="Debabrata Ghorai", email="ghoraideb@gmail.com" },
]
description = "Geospatial utilities for Remote Sensing and GIS application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: (C) 2022 dghorai :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dghorai/rsgis-toolbox"
"Bug Tracker" = "https://github.com/dghorai/rsgis-toolbox/issues"
