[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoutils-rsg"
version = "0.0.3"
authors = [
  { name="Debabrata Ghorai", email="ghoraideb@gmail.com" },
]
description = "Geospatial Utilities for Remote Sensing and GIS Application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: (C) 2022 dghorai :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["geobhumi"]

[project.urls]
"Homepage" = "https://github.com/dghorai/geoutils-rsg"
"Bug Tracker" = "https://github.com/dghorai/geoutils-rsg/issues"
